--- a/spring-cloud-config-client/src/main/resources/application.yml
+++ b/spring-cloud-config-client/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   application:
-    name: spring-cloud-config-client
-  cloud:
-    config:
-      uri: http://localhost:8000
-server:
-  port: 8001
+    name: spring-cloud
+#  cloud:
+#    config:
+#      uri: http://localhost:8001
+
+
