--- a/spring-cloud-service-hi/src/main/resources/application.yml
+++ b/spring-cloud-service-hi/src/main/resources/application.yml
@@ -2,8 +2,10 @@ spring:
   application:
     name: spring-cloud-service-hi
 server:
-  port: 8003
+  port: 8013
 eureka:
+  instance:
+    hostname: localhost
   client:
     service-url:
       defaultZone: http://localhost:8000/eureka/
